oops/floatdoublefunoverloading
  

#include<iostream> 
using namespace std; 
void test(float s,float t) 
{ 
    cout << "Function with float called "; 
} 
void test(int s,int t) 
{ 
    cout << "Function with int called "; 
} 
int main() 
{ 
    test(3.5f, 5.6f); // Added suffix "f" to both values to  
                     // tell compiler, it's a float value 
    //o/p Function with float called     
   /*test(3.5, 5.6);
   main.cpp: In function ‘int main()’:
main.cpp:14:18: error: call of overloaded ‘test(double, double)’ is ambiguous
     test(3.5, 5.6); // Added suffix "f" to both values to  
                  ^
main.cpp:4:6: note: candidate: void test(float, float)
 void test(float s,float t) 
      ^~~~
main.cpp:8:6: note: candidate: void test(int, int)
 void test(int s,int t) 
      ^~~~*/
    return 0; 
} 
